{
    "name": "GameInput",
    "maps": [
        {
            "name": "Gameplay",
            "id": "349767a5-5167-4274-a2cf-bda880576ea9",
            "actions": [
                {
                    "name": "PrimaryTouchDelta",
                    "type": "PassThrough",
                    "id": "3a03b3e8-357f-4349-a52f-628193052f11",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PrimaryTouchContact",
                    "type": "Button",
                    "id": "22a13f33-a9b1-4a33-8190-7e8759b84e82",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "95696535-c437-4a00-96f0-e59c4daa3a05",
                    "path": "<Touchscreen>/primaryTouch/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryTouchDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "11beff85-4fc7-4212-b3d3-fd066c21a4ab",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryTouchContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}